hphp/test/vm/dv_ia.php.exp
HipHop Fatal error: Default value for parameter a0 with type Array needs to have the same type as the type hint int in hphp/test/vm/dv_ia.php on line 3
