hphp/test/vm/dv_ia.php
<?php
class A {
  public function a(int $a0 = array()) {}
}

